[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/32x32/Board_tile_set.png" type="Texture" id=1]
[ext_resource path="res://AI.gd" type="Script" id=2]
[ext_resource path="res://DiceRoller.tscn" type="PackedScene" id=3]
[ext_resource path="res://Dice.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/32x32/arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/wood.jpg" type="Texture" id=6]
[ext_resource path="res://assets/Players_CorrectGrid.png" type="Texture" id=7]
[ext_resource path="res://assets/Player 1 wins.png" type="Texture" id=8]
[ext_resource path="res://assets/Player 2 wins.png" type="Texture" id=9]
[ext_resource path="res://assets/Draw.png" type="Texture" id=10]
[ext_resource path="res://Music & SFX/Battle.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/32x32/Board_tile_set_Barrier.png" type="Texture" id=12]
[ext_resource path="res://Music & SFX/Castle_Taken_SFX.mp3" type="AudioStream" id=13]
[ext_resource path="res://Music & SFX/Player_Wins_SFX.mp3" type="AudioStream" id=14]
[ext_resource path="res://Music & SFX/Game_StartSFX.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/Player_2_turn_text.png" type="Texture" id=16]
[ext_resource path="res://assets/Player_1_turn_text.png" type="Texture" id=17]
[ext_resource path="res://assets/clicktoroll.png" type="Texture" id=18]

[sub_resource type="TileSet" id=1]
0/name = "Board_tile_set.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 352, 0, 352, 384 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 704, 0, 352, 384 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1056, 0, 352, 384 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 352, 384 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "defeat",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "victory",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 352, 384, 352, 384 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 704, 384, 352, 384 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1056, 384, 352, 384 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 384, 352, 384 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "defeat",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "victory",
"speed": 5.0
} ]

[sub_resource type="Animation" id=19]
resource_name = "New Anim"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 360 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "RESET"
length = 0.001
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "New Anim"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 360 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "RESET"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "New Anim"
length = 2.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 360 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "RESET"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="TileSet" id=25]
0/name = "Board_tile_set_Barrier.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Field" type="Node2D"]
position = Vector2( 272, 80 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537 )

[node name="Highlight" type="Polygon2D" parent="."]
modulate = Color( 0.794922, 0.400566, 0, 0.745098 )
position = Vector2( 0, -1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="RollTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DiceRoller" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 240, 240 )
z_index = 4
z_as_relative = false

[node name="Dice" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 16, 16 )
scale = Vector2( 0.125, 0.125 )
z_index = 3
z_as_relative = false

[node name="ArrowContainer" type="Node2D" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="ArrowContainer"]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D"]
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="ArrowContainer"]
position = Vector2( 32, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D2"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D2"]
rotation = 0.785398
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="ArrowContainer"]
position = Vector2( 32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D3"]
rotation = 1.5708
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="ArrowContainer"]
position = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D4"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D4"]
rotation = 2.35619
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D5" type="Area2D" parent="ArrowContainer"]
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D5"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D5"]
rotation = 3.14159
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D6" type="Area2D" parent="ArrowContainer"]
position = Vector2( -32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D6"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D6"]
rotation = 3.92699
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D7" type="Area2D" parent="ArrowContainer"]
position = Vector2( -32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D7"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D7"]
rotation = 4.71239
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D8" type="Area2D" parent="ArrowContainer"]
position = Vector2( -32, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowContainer/Area2D8"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ArrowContainer/Area2D8"]
rotation = -0.785398
scale = Vector2( 1, 0.5 )
texture = ExtResource( 5 )

[node name="FillTimer" type="Timer" parent="."]
one_shot = true

[node name="TurnDecider" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 240 )
z_index = 6
is_starter = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 272, 100 )
z_index = -1
texture = ExtResource( 6 )

[node name="Player1" type="AnimatedSprite" parent="."]
position = Vector2( -96, 329 )
z_index = 1
frames = SubResource( 7 )

[node name="Player2" type="AnimatedSprite" parent="."]
position = Vector2( 576, 329 )
z_index = 1
frames = SubResource( 10 )

[node name="Victory1" type="Sprite" parent="."]
z_index = 10
texture = ExtResource( 8 )
offset = Vector2( 240, -120 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Victory1"]
reset_on_save = false
"anims/New Anim" = SubResource( 19 )
anims/RESET = SubResource( 21 )

[node name="Victory2" type="Sprite" parent="."]
z_index = 10
texture = ExtResource( 9 )
offset = Vector2( 240, -120 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Victory2"]
reset_on_save = false
"anims/New Anim" = SubResource( 20 )
anims/RESET = SubResource( 22 )

[node name="Draw" type="Sprite" parent="."]
texture = ExtResource( 10 )
offset = Vector2( 240, -120 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Draw"]
reset_on_save = false
"anims/New Anim" = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Border" type="TileMap" parent="."]
z_index = -1
z_as_relative = false
tile_set = SubResource( 25 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 2, 65535, 0, 65536, 15, 0, 65538, 131071, 0, 65536, 65551, 0, 65538, 196607, 0, 65536, 131087, 0, 65538, 262143, 0, 65536, 196623, 0, 65538, 327679, 0, 65536, 262159, 0, 65538, 393215, 0, 65536, 327695, 0, 65538, 458751, 0, 65536, 393231, 0, 65538, 524287, 0, 65536, 458767, 0, 65538, 589823, 0, 65536, 524303, 0, 65538, 655359, 0, 65536, 589839, 0, 65538, 720895, 0, 65536, 655375, 0, 65538, 786431, 0, 65536, 720911, 0, 65538, 851967, 0, 65536, 786447, 0, 65538, 917503, 0, 65536, 851983, 0, 65538, 983039, 0, 65536, 917519, 0, 65538, 1048575, 0, 131072, 983040, 0, 131073, 983041, 0, 131073, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131073, 983048, 0, 131073, 983049, 0, 131073, 983050, 0, 131073, 983051, 0, 131073, 983052, 0, 131073, 983053, 0, 131073, 983054, 0, 131073, 983055, 0, 131074 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="StartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="CaptureSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Turn1" type="Sprite" parent="."]
visible = false
position = Vector2( -145, 0 )
texture = ExtResource( 17 )

[node name="Turn2" type="Sprite" parent="."]
visible = false
position = Vector2( 625, 0 )
texture = ExtResource( 16 )

[node name="RollIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 240 )
z_index = 10
texture = ExtResource( 18 )

[connection signal="timeout" from="RollTimer" to="." method="_on_RollTimer_timeout"]
[connection signal="hide" from="DiceRoller" to="." method="_on_DiceRoller_hide"]
[connection signal="input_event" from="ArrowContainer/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D4" to="." method="_on_Area2D4_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D5" to="." method="_on_Area2D5_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D6" to="." method="_on_Area2D6_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D7" to="." method="_on_Area2D7_input_event"]
[connection signal="input_event" from="ArrowContainer/Area2D8" to="." method="_on_Area2D8_input_event"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="finished" from="StartSFX" to="." method="_on_StartSFX_finished"]
[connection signal="finished" from="CaptureSFX" to="." method="_on_CaptureSFX_finished"]
